<resources>
    <string name="app_name">AquaFish</string>
    <string name="trader">Trader</string>
    <string name="order">Order</string>
    <string name="bill">Bill</string>
    <string name="stock">Stock</string>
    <string name="settings">Settings</string>
    <string name="app_version">App Version</string>

    <string name="search">Search</string>

    <!--    trader add Dialog strings-->
    <string name="trader_detials">Trader Details</string>

    <string name="name">Name</string>
    <string name="alias">Alias</string>
    <string name="location">Location</string>
    <string name="mobile">Mobile</string>
    <string name="traderid">Trader ID</string>

    <string name="enter_name_input">Enter name of Trader</string>
    <string name="select_name_input">Select name of Trader</string>
    <string name="enter_alias_input">Enter alias of Trader</string>
    <string name="enter_location_input">Enter location of Trader</string>
    <string name="enter_mobile_input">Enter mobile no. of Trader</string>
    <string name="enter_traderid_input">Enter Trader ID</string>


    <string name="cancel_btn_text">Cancel</string>
    <string name="ok_btn_text">Ok</string>


    <string name="add_item">Add Item</string>
    <string name="item">Item</string>
    <string name="rate">Rate</string>
    <string name="total_kg">Total Kgs</string>
    <string name="total_box">Total Box</string>
    <string name="date">Date</string>
    <string name="table">Table</string>
    <string name="list">List</string>
    <string name="box">Box</string>
    <string name="kg">Kg</string>
    <string name="amount">Amount</string>

    <string name="zero">0</string>
    <string name="zerodot">0.0</string>

    <string name="share">Share</string>
    <string name="buyer">Buyer</string>


    <string name="total_order">Total Order</string>
    <string name="select_item_input">Select Item</string>
    <string name="enter_box">Enter no of Box</string>
    <string name="enter_kgs">Enter no of Kgs</string>
    <string name="enter_rate">Enter Rate</string>
    <string name="enter_date">Pick Date</string>
    <string name="enter_time">Pick time</string>
    <string name="enter_description">Enter description</string>
    <string name="enter_breed_name">Enter breed Name</string>
    <string name="enter_short_name">Enter three letter name</string>
    <string name="enter_bill_no">Enter Bill No.</string>


    <string name="individual">Individual</string>
    <string name="entry">Entry</string>
    <string name="total_item">Total Item</string>
    <string name="time">Time</string>
    <string name="breed">Breed</string>
    <string name="stock_entry">Stock Entry</string>
    <string name="short_name">Short Name</string>
    <string name="description">Description</string>

    <string name="total_amount">Total Amount</string>
    <string name="edit_order">Edit Order</string>
    <string name="generate">Generate</string>
    <string name="bill_no">Bill No</string>
    <string name="bill_date">Bill Date</string>
    <string name="bill_amount">Bill Amount</string>
    <string name="balance">Balance</string>
    <string name="old_balance">Old Balance</string>
    <string name="bill_balance">Bill + Balance</string>
    <string name="total">Total</string>
    <string name="total_bill">Total Bill</string>

    <string name="warning">Warning</string>
    <string name="delete_waring">Do you want to Delete?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <!--    Toast Dispaly-->

    <string name="give_input_for_all_field">Give Inputs for All fields</string>
    <string name="give_input_for_breedname_and_shortname_field">Give Inputs for BreedName and ShortName fields</string>
    <string name="short_name_already_there">Short Name Already Exsist</string>
    <string name="error_in_product_data">Something went Wrong. Product was not saved</string>
    <string name="short_name_not_more_than_4">Short Name Should be three to four Char</string>


    <string name="give_value_for_trader_id">Give input for Trader ID</string>
    <string name="give_value_for_name">Give input for Trader Name</string>
    <string name="trader_id_exist">Trader ID Already Exist</string>
    <string name="error_in_trader_data">Something went Wrong. Trader was not saved</string>

    <string name="give_input_box">Give Input to Box</string>
    <string name="give_input_kg">Give Input to KG</string>
    <string name="give_input_rate">Give Input to Rate</string>
    <string name="zero_not_accept">Zero will not accept for all the Input</string>
    <string name="not_valid_input">Input given is not Valid</string>

    <string name="once_again_back">Please click BACK again to exit</string>

    <string name="order_saved">Order Saved</string>
    <string name="order_updated">Order Updated</string>

    <string name="add_order">Add Order</string>
    <string name="add_trader">Add Trader</string>

    <string name="print">Print</string>
    <string name="back">Back</string>
    <string name="view">View</string>

    <string name="from_date">From Date</string>
    <string name="to_date">To Date</string>

    <string name="select_date">Select Date</string>
<!--    <string name="share">Share</string>-->

    <string name="spf_tank">S.P.F. டேங்க் மீன், ஈரோடு</string>
    <string name="sale_items">லோகு, கட்லா, ௫பா, பங்காஸ், ஜிலேபி, அனைத்து வகை மீன் வியாபாரம்</string>
    <string name="phone_number">Ph: 9952483992</string>

    <string name="order_added_to_bill">Bill generated to this Order. Bill_No_</string>

</resources>
