<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_trader"
        android:enabled="true"
        android:icon="@drawable/trader_icon_selected"
        android:title="@string/trader"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_order"
        android:enabled="true"
        android:icon="@drawable/order_icon_selected"
        android:title="@string/order"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_bill"
        android:enabled="true"
        android:icon="@drawable/bill_icon_unselected"
        android:title="@string/bill"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_stock"
        android:enabled="true"
        android:icon="@drawable/stock_icon_unselected"
        android:title="@string/stock"
        android:visible="true"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_setting"
        android:enabled="true"
        android:icon="@drawable/setting_icon"
        android:title="@string/settings"
        app:showAsAction="ifRoom" />
</menu>