<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:orientation="horizontal" >


    <TextView
        android:id="@+id/bill_generate_order_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/date"/>

    <TextView
        android:id="@+id/bill_generate_order_breed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/breed"/>

    <TextView
        android:id="@+id/bill_generate_order_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1.1"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/box"/>

    <TextView
        android:id="@+id/bill_generate_order_kg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1.15"
        android:layout_gravity="center"
        android:gravity="right"
        android:text="@string/kg"/>

    <TextView
        android:id="@+id/bill_generate_order_rate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="right"
        android:layout_weight="1.1"
        android:text="@string/rate"/>

    <TextView
        android:id="@+id/bill_generate_order_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/amount"
        android:layout_weight="1"
        android:gravity="right"
        />
    </LinearLayout>
</LinearLayout>