<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/zero"
        android:textColor="@color/colorPrimaryDark"
        android:layout_gravity="center"
        android:textSize="20sp"
        android:id="@+id/order_list_count_txt"
        />
    <TextView
        android:id="@+id/order_total_count_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_order"
        android:textSize="12sp"
        android:layout_gravity="center"
        android:textColor="@color/colorPrimaryDark"
        />

    <TextView
        android:id="@+id/order_list_date_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:textSize="12sp"
        android:layout_gravity="center"
        android:visibility="gone"
        android:textColor="@color/colorPrimaryDark"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:orientation="horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="12sp"
            android:gravity="center"
            android:visibility="gone"
            android:textColor="@color/white"
            android:text="@string/date"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="12sp"
            android:gravity="center"
            android:textColor="@color/white"
            android:text="@string/name"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="12sp"
            android:gravity="center"
            android:textColor="@color/white"
            android:text="@string/item"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="12sp"
            android:gravity="center"
            android:textColor="@color/white"
            android:text="@string/box"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="12sp"
            android:gravity="center"
            android:textColor="@color/white"
            android:text="@string/kg"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1"
            android:textSize="12sp"
            android:textColor="@color/white"
            android:text="@string/rate"
            />

    </LinearLayout>
    <ListView
        android:id="@+id/order_list_tab_listview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        />

</LinearLayout>