<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/bill_generate_add_order_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight=".95"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/date"/>

        <TextView
            android:id="@+id/bill_generate_add_order_breed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/breed"/>

        <TextView
            android:id="@+id/bill_generate_add_order_box"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.1"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/box"/>

        <TextView
            android:id="@+id/bill_generate_add_order_kg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.1"
            android:layout_gravity="center"
            android:gravity="right"
            android:text="@string/kg"/>

        <TextView
            android:id="@+id/bill_generate_add_order_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="right"
            android:layout_weight="1.05"
            android:text="@string/rate"/>

        <ImageView
            android:id="@+id/bill_generate_add_order_checkbox"
            android:layout_width="match_parent"
            android:layout_height="24dp"
            android:layout_gravity="center"
            android:src="@drawable/baseline_check_box_outline_blank_30"
            android:layout_weight="1"
            android:gravity="center"
            />

    </LinearLayout>


</LinearLayout>