<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="1">
                <TextView
                    android:id="@+id/stock_entry_total_item_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimaryDark"
                    android:layout_marginBottom="10dp"
                    android:layout_centerInParent="true"
                    android:text="@string/zero"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@+id/stock_entry_total_item_txt"
                    android:text="@string/total_item"
                    android:textColor="@color/colorPrimaryDark"
                    />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="1">
                <TextView
                    android:id="@+id/stock_entry_total_kg_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@color/colorPrimaryDark"
                    android:layout_marginBottom="10dp"
                    android:layout_centerInParent="true"
                    android:text="@string/zero"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@+id/stock_entry_total_kg_txt"
                    android:text="@string/total_kg"
                    android:textColor="@color/colorPrimaryDark"
                    />
            </RelativeLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="12sp"
                android:gravity="center"
                android:textColor="@color/white"
                android:text="@string/date"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_weight="1"
                android:textSize="12sp"
                android:textColor="@color/white"
                android:text="@string/time"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_weight="1"
                android:textSize="12sp"
                android:textColor="@color/white"
                android:text="@string/name"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="12sp"
                android:gravity="center"
                android:textColor="@color/white"
                android:text="@string/breed"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="12sp"
                android:gravity="center"
                android:textColor="@color/white"
                android:text="@string/box"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="12sp"
                android:gravity="center"
                android:textColor="@color/white"
                android:text="@string/kg"
                />

        </LinearLayout>
        <ListView
            android:id="@+id/stock_entry_listview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </LinearLayout>

</LinearLayout>