<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/bill_list_view_bill_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.1"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/date"/>

        <TextView
            android:id="@+id/bill_list_view_bill_no"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.2"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/bill_no"/>

        <TextView
            android:id="@+id/bill_list_view_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.1"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/name"/>

        <TextView
            android:id="@+id/bill_list_view_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.2"
            android:layout_gravity="center"
            android:gravity="right"
            android:text="@string/amount"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1.4"
            android:textSize="12sp"
            android:textColor="@color/white"
            />





    </LinearLayout>


</LinearLayout>