<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/grey"
        android:layout_weight="1">
        <TextView
            android:id="@+id/trader_header_textview"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textSize="15dp"
            android:text="@string/add_order"

            android:background="@color/colorPrimary"
            android:textColor="@color/white"
            android:gravity="center"/>




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_weight="1"
            android:layout_marginTop="10dp"
            android:orientation="vertical">.
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_weight=".95"
                    android:text="@string/date"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:text="@string/breed"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_weight="1.1"
                    android:text="@string/box"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:layout_weight="1.1"
                    android:text="@string/kg"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:layout_weight="1.05"
                    android:text="@string/rate"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    />



            </LinearLayout>
<!--           <ScrollView-->
<!--               android:layout_width="match_parent"-->
<!--               android:layout_height="match_parent">-->
           <ListView
               android:id="@+id/bill_generate_order_list"
               android:layout_width="match_parent"
               android:background="@color/white"
               android:layout_height="300dp"/>
<!--           </ScrollView>-->

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"

            android:layout_weight="1"
            android:orientation="horizontal">
            <Button
                android:id="@+id/bill_generate_add_dialog_cancel_btn"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/cancel_btn_bg"
                android:textColor="@color/colorPrimary"
                android:paddingBottom="10dp"
                android:layout_marginRight="10dp"
                android:textSize="10dp"
                android:layout_marginLeft="20dp"
                android:layout_weight="1"
                android:text="@string/cancel_btn_text"/>
            <Button
                android:id="@+id/bill_generate_add_dialog_ok_btn"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_weight="1"
                android:textSize="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/ok_btn_bg"
                android:textColor="@color/white"
                android:paddingBottom="10dp"
                android:text="@string/ok_btn_text"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>