<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/grey"
        android:layout_weight="1">
        <TextView
            android:id="@+id/stock_entry_header_textview"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textSize="15dp"
            android:text="@string/stock_entry"
            android:layout_marginBottom="10dp"
            android:background="@color/colorPrimary"
            android:textColor="@color/white"
            android:gravity="center"/>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            >
            <TextView
                android:id="@+id/stock_entry_name_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="3dp"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp"
                android:layout_alignParentTop="true"
                android:text="@string/breed"/>
            <EditText
                android:id="@+id/stock_entry_name_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:importantForAutofill="no"
                android:inputType="text"
                android:paddingTop="0dp"
                android:textSize="12sp"
                android:layout_below="@+id/stock_entry_name_textview"
                android:hint="@string/enter_breed_name"/>
        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:layout_weight="1"
            android:orientation="horizontal">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_weight="1">
                <TextView
                    android:id="@+id/stock_entry_short_name_textview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="3dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="16sp"
                    android:layout_alignParentTop="true"
                    android:text="@string/short_name"/>
                <EditText
                    android:id="@+id/stock_box_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:paddingTop="0dp"
                    android:textSize="12sp"
                    android:layout_below="@+id/stock_entry_short_name_textview"
                    android:hint="@string/enter_short_name"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="1">
            </RelativeLayout>

        </LinearLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            >
            <TextView
                android:id="@+id/stock_entry_description_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="3dp"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp"
                android:layout_alignParentTop="true"
                android:text="@string/description"/>
            <EditText
                android:id="@+id/stock_entry_description_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:importantForAutofill="no"
                android:inputType="text"
                android:paddingTop="0dp"
                android:textSize="12sp"
                android:layout_below="@+id/stock_entry_description_textview"
                android:hint="@string/enter_description"/>
        </RelativeLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:orientation="horizontal">
            <Button
                android:id="@+id/stock_dialog_ok_btn"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@drawable/cancel_btn_bg"
                android:textColor="@color/colorPrimary"
                android:paddingBottom="10dp"
                android:layout_marginRight="10dp"
                android:textSize="10dp"
                android:layout_marginLeft="20dp"
                android:layout_weight="1"
                android:text="@string/cancel_btn_text"/>
            <Button
                android:id="@+id/stock_dialog_cancel_btn"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_weight="1"
                android:textSize="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="20dp"
                android:background="@drawable/ok_btn_bg"
                android:textColor="@color/white"
                android:paddingBottom="10dp"
                android:text="@string/ok_btn_text"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>